# agimus_cardboard

./: CMakeLists.txt  package.xml  setup.cfg
agimus_cardboard/: CameraBasler.py  camera.py  camera_parameters.yaml  camera_test.py  cardboard_parameters.yaml  crbtools.py  detector.py  detector_parameters.yaml  draw.py  hole_insert_planner.py  hole_planner.py  hole_planner_base.py  hole_planner_parameters.yaml  protocol.py
geometry/: __init__.py  all.py  basic.py  camera.py  conf.py  estim.py  mat_vec_types.py  optim.py  projection.py  projection_param.py  types.py
mathlib/: optimize.py  types.py
rosdep/: 20-pypylon.list  pypylon.yaml
templates/: template_1.yml  template_2.yml  template_3.yml  template_4.yml  template_B_1.yml
