<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agimus_cardboard</name>
  <version>0.0.0</version>
  <description>
    Common launch and config files used across all demos created for Agimus Project.
  </description>
  <maintainer email="martin.matousek@cvut.cz">Martin Matousek</maintainer>
  <license>BSD-2</license>
  <author email="martin.matousek@cvut.cz">Martin Matousek</author>

  <url type="website">https://www.agimus-project.eu/</url>
  <url type="repository">https://github.com/agimus-project/agimus-demos</url>
  <url type="bugtracker">https://github.com/agimus-project/agimus-demos/issues</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- External dependencies. -->
  <exec_depend>python3-jinja2</exec_depend>

  <!-- Kuka dependencies. -->
  <exec_depend>lbr_fri_ros2_stack</exec_depend>
  <exec_depend>lbr_description</exec_depend>
  <exec_depend>lbr_demos_cpp</exec_depend>

  <!-- ROS2 dependencies. -->
  <build_depend>generate_parameter_library</build_depend>
  <build_depend>generate_parameter_library_py</build_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- Consortium dependencies. -->
  <exec_depend>linear_feedback_controller</exec_depend>
  <exec_depend>linear_feedback_controller_msgs</exec_depend>
  <exec_depend>agimus_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
